--- a/WebClient/Gemfile
+++ b/WebClient/Gemfile
@@ -1,6 +1,14 @@
 source 'https://rubygems.org'
 
 gem 'sinatra'
-gem 'mysql2'
 gem 'chartkick'
-gem "sinatra-activerecord"
+gem 'sinatra-activerecord'
+
+group :development, :production do
+  gem 'mysql2'
+end
+
+group :test do
+  gem 'rspec'
+  gem 'sqlite3'
+end
